_assets/css/index.scss
/* ... */
.withborder-right{
  border-right: solid 2px var(--fedsim-blue1);
}

::selection{
  color: var(--fedsim-offwhite);
  background-color: var(--fedsim-darkgrey);
}

@media screen and (max-width: 414px){
  .no-mobile{
    display: none!important;
  }
}

//Header styles
.usa-banner__inner {
  display: block;
  align-items: center;
  text-align: center;
}

.usa-navbar{
  height: 5rem;
}

.usa-menu-btn{
  padding: 8px;
  margin: 10px;
}

input[type="search"]{
  border-radius: 6px 0 0 6px;
}

//Footer styles
hr.footer-border{
  width: 100vw;
  border-top: 5px solid var(--fedsim-lightgrey);
  margin-top: 0;
}

.usa-footer{
  line-height: 1.4rem;
  font-family: "Montserrat", sans-serif;
  font-size: 0.80rem;
}

.footer_side_left, .footer_side_right{
  color: var(--fedsim-blue1);
  margin-right: 20px;
}

.footer_side_left{
  text-align: right; 
}

.footer_side_right{
  text-align: left; 
}

.logo-links{
  padding: 10px;
}

.footer-back{
  width: 100vw;
  background-color: var(--fedsim-litegrey);
  margin-top: 10px;
}

@media screen and (max-width: 414px){
  .footer_side_left,
  .footer_side_right{
    text-align: center; 
  }
}

//Callout styles
.usa-hero{
  background-image: asset_url("home.jpg");
  height: 500px;
  font-family: "Montserrat", sans-serif;
}

.usa-hero__callout{
  min-width: 550px;
  background-color: white;
  border-radius: 15px;
  padding: 1rem 1rem 0.4rem 1rem;
  margin-left: 60px;
}

.usa-hero__callout, .usa-hero__heading{
  color: var(--fedsim-blue1);
}

.usa-hero__callout h2{
  margin-block-start: 10px;
  font-size: 1.45rem;
}


@media screen and (max-width: 414px){
  .usa-hero{
    background-image: none;
    height: auto;
  }

  .usa-hero__callout{
    min-width: 300px;
    background-color: var(--fedsim-blue1);
    border-radius: 15px;
    padding: 10px;
    margin: auto;
  }

  .usa-hero__callout, .usa-hero__callout h2{
    color: white;
  }

}


//Blocks
.grid-wrapper{
  display: flex;
  flex-flow: row nowrap;
}

.flex-wrapper {
  display: flex;
  flex-flow: row nowrap;
}

.flex-wrapper-big, .flex-wrapper-full{
  margin: auto;
  display: flex;
}

.flex-wrapper-big{
  width: 960px;
}

.flex-wrapper-full{
  width: 1000px;
}

@media screen and (max-width: 768px){
  .flex-wrapper-big{
    width: 740px;
  }
}

@media screen and (max-width: 375px){
  .grid-wrapper{
    display: grid;
    margin: auto;
  }
  
  .flex-wrapper-big, .flex-wrapper-full{
    width: 360px;
    flex-flow: column;
  }

  .flex-wrapper{
    display: flex;
    flex-flow: wrap;
    margin: auto;
  }

  .one-third, .one-half, .one-fourth{
    width: auto;
  }
}


.infoblock, .darkblock, .darkblock-alt{
  text-align: center;
}

.modalblock{
  text-align: left;
}

.infoblock, .modalblock{
  display: flow-root;
  color: var(--fedsim-blue1);
  background-color: white;
  margin: auto;
  padding: 10px;
}

.block-header, .block-header-grey{
  padding: 10px;
  color: white;
  font-weight: 600;
  text-transform: uppercase;
}
.block-header{
  background-color: var(--fedsim-blue1);
  font-size: 1.2em;
}

.block-header-grey{
  background-color: var(--fedsim-darkgrey);
  font-size: 1.4em;
  margin-bottom: 20px;
}

.tallblock{
  height: 630px;
  padding: 0 20px;
}

@media screen and (max-width: 768px){
  .tallblock{
    height: 720px;
  }
}

@media screen and (max-width: 414px){
  .tallblock{
    width: 360px;
    height: auto;
  }
  
  .modalblock{
    width: 300px;
  }

  .infoblock{
    font-size: 1.1em;
  }
}

.darkblock, .darkblock-alt{
  color: white;
  background-color: var(--fedsim-blue1);
  margin-bottom: 12px;
}

.darkblock{
  background-color: var(--fedsim-blue1);
}

.darkblock-alt{
  background-color: var(--fedsim-darkgrey);
}

.lowerdarkblock-darkblue{
  color: white;
  background: linear-gradient(to bottom,  white 0%,white 17%, var(--fedsim-blue1) 17%, var(--fedsim-blue1) 100%);
}

.lowerdarkblock-blue{
  color: white;
  background: linear-gradient(to bottom,  white 0%,white 17%, var(--fedsim-blue2) 17%, var(--fedsim-blue2) 100%);
}

.lowerdarkblock-darkgrey{
  color: white;
  background: linear-gradient(to bottom,  white 0%,white 17%, var(--fedsim-darkgrey) 17%, var(--fedsim-darkgrey) 100%);
}

.wholeblock{
  width: 1000px;
  display: block;
  margin: auto;
}

@media screen and (max-width: 768px){
  .wholeblock{
    width: 100%;
  }
}

.dual-block{
  display: flex;
}

.half-block {
  width: 50%;
  display: grid;
  padding: 10px;
  justify-content: space-around ;
  margin: auto;
}

.third-block{
  display: block;
  text-align: center;
}

.fourth-block{
  display: block;
  width: 25%;
  margin: 0 4px;
  text-align: center;
  padding-bottom: 16px;
}

@media screen and (max-width: 414px){
  .fourth-block{
    width: 355px;
    margin: 4px;
  }

}

.learnblock{
  width: 440px;
  height: 190px;
  margin: 10px;
  display: block;
  text-align: center;
}

@media screen and (max-width: 414px){
  .learnblock{
    width: 380px;
    height: auto;
    margin: 4px;
    color: var(--fedsim-blue1);
  }
}

@media screen and (max-width: 375px){
  .learnblock{
    width: 355px;
    height: auto;
    margin: 4px;
  }
}

.learnblock ol, .learnblock ul{
  width: 60%;
  text-align: left;
  margin: auto;
}

.learnblock p{
  margin-block-start: 0.4em;
  font-size: 1.1em;
}

.learnblock-hover-text{
  font-size: 1em!important;
}

.learn-text{
  font-size: 0.9em!important;
  margin-block-end: 0.7em;
}

.learn-gov{
  background-image: asset-url("cso1.png");
  background-color: var(--fedsim-blue1);
}

.learn-ind{
  background-image: asset-url("cso2.png");
  background-color: var(--fedsim-darkgrey);
}

.learnmore-mobile{
display: none;
}

@media screen and (max-width: 414px){
  .learnmore-full{
    display: none;
  }

  .learnmore-mobile{
    display: flex;
  }
}

.stack-top{
  z-index: 9;
  position: absolute;
  opacity: 0;
  padding: 0 10px;
  font-size: 1.1em;
}

.stack-top:hover{
  opacity: 100%;
}

.stack-top h2{
  color: var(--fedsim-darkgrey);
  margin: 10px;
}
/* ... */

